# humor-alignment-tax

./: .env.example  .gitignore  Makefile  README.md  alignment_tax_report.md  inverted_U.ipynb  pending_work.md  pyproject.toml
data/: README.txt  local_satire_sources.jsonl
data/human_eval/: human_rating_sheet.csv  rating_key.json
data/metrics_zh/: joke_metadata.json
data/probes/: probe_results.json  probe_results.md
data/safety_eval/: responses_Llama-3.2-1B-Instruct-humor.json  responses_Llama-3.2-1B-Instruct-safety.json  responses_Llama-3.2-1B-Instruct.json  safety_eval_summary.json
docs/: local_satire_study.md
neurips2026/: humor_alignment_tax.aux  humor_alignment_tax.out  humor_alignment_tax.tex
outputs/: local_satire_failure_tags_gemini35_oai54mini_human_baseline.csv  local_satire_generations_gemini35_oai54mini.csv  local_satire_rubric.md  local_satire_scores_completed_with_human_baseline.csv  local_satire_scores_completed_with_human_baseline.xlsx  local_satire_scores_template_gemini35_oai54mini.csv  local_satire_summary_gemini35_oai54mini_human_baseline.csv
presentation/: alignment_tax.aux  alignment_tax.nav  alignment_tax.odp  alignment_tax.out  alignment_tax.tex  alignment_tax.toc
src/analysis/: alignment_comparison.py  inverted_u.py  local_satire_analysis.py  local_satire_plotting.py  plotting.py
src/dataset/: joke.py  loader.py  local_satire.py  local_satire_loader.py
src/evaluation/: claude_judge.py  gemini_judge.py  llm_judge.py  local_satire_prompts.py
src/metrics/: embedding.py  entropy.py  surprisal.py
tests/: test_metrics.py
(+26 files in other folders)
