[project]
name = "humor_alignment_tax"
version = "0.1.0"
description = "Quantifying the alignment tax on humor through distributional analysis of LLM outputs."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "dotenv>=0.9.9",
    "einops>=0.8.2",
    "huggingface-hub[cli]>=0.23.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0",
    "peft>=0.14.0",
    "pytest>=9.0.2",
    "rich>=14.3.2",
    "scikit-learn==1.4.2",
    "scipy>=1.17.0",
    "scienceplots>=2.1.1",
    "seaborn>=0.13.2",
    "torch==2.9.1",
    "tqdm>=4.67.2",
    "trl>=0.8.0",
    "transformers>=4.45.0",
    "wandb>=0.24.1",
    "anthropic>=0.105.2",
    "google-genai>=2.7.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # import sorting
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
]
fixable = ["ALL"]

[tool.ty]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
